Added endpoint for refreshing oauth token
